# simple-git

./: LICENSE  README.md  pyproject.toml
src/ezgit/: ezgit.py
src/simple_git/: simple_git.py
tests/: test_ezgit.py  test_simple_git.py
